refactor: delete spaces and imports